--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,4 +1,45 @@
 @import "./variables";
-h1 {
-  color: $color-red;
+
+.parent_img {
+  max-height: 200px;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+
+/// menu
+.menu_img {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  right: 10px;
+}
+
+//logo
+.logo_img {
+  width: 80px;
+  height: 50px;
+}
+
+/// page course/list
+.image_me {
+  max-height: 80px;
+  min-height: 70px;
+
+  object-fit: cover;
+}
+
+.parent_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parent_btn a {
+  margin-left: 10px;
+  color: #fff;
+}
+
+.select-action {
+  margin: 0 16px;
 }
