--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,24 @@
-<h1>home</h1>
+<div class="mt-2">
+  <div class="row">
+    {{#each course}}
+    <div class="col-sm-6 col-lg-4 mt-4 parent_course shadow-lg">
+      <div class="card">
+        <a href="/courses/{{this.slug}}">
+
+          <img class="card-img-top parent_img" src="{{this.image}}" alt="{{this.title}}" />
+        </a>
+        <div class="card-body">
+          <a href="/courses/{{this.slug}}">
+            <h5 class="card-title">{{this.title}}</h5>
+          </a>
+          <p class="card-text text-truncate">{{this.description}}</p>
+          <a href="#" class="btn btn-primary btn-lg btn-block">Buy</a>
+
+        </div>
+      </div>
+
+    </div>
+    {{/each}}
+
+  </div>
+</div>
